Feat/add retrieval recall testing page (#81)
* fix:webbaseloader error

* feat:retrievel test page

* fix:layout update

* fix:update teamId stores before navigate push

* fix: Optimize the layout for hit testing.

* feat:add embedding recall test

* fix:full text retreval

* fix: retrieavel score
